# survtreeshap

./: README.md  pyproject.toml
survtreeshap/: realdata_GBSG.ipynb  simulations_quality.ipynb  simulations_scalability.ipynb  survtreeshap.py  utils.py
